--- a/k8s/flask/flask-deployment.yaml
+++ b/k8s/flask/flask-deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flaskapi-deployment
+  namespace: flaskmysql
   labels:
     app: flaskapi
 spec:
@@ -37,6 +38,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: flask-service
+  namespace: flaskmysql
 spec:
   selector:
     app: flaskapi
