--- a/k8s/mysql/mysql-deployment.yaml
+++ b/k8s/mysql/mysql-deployment.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mysql
+  namespace: flaskmysql
   labels:
     app: db
 spec:
@@ -44,6 +45,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mysql
+  namespace: flaskmysql
   labels:
     app: db
 spec:
