--- a/k8s/mysql/persistent-volume.yaml
+++ b/k8s/mysql/persistent-volume.yaml
@@ -18,6 +18,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mysql-pv-claim
+  namespace: flaskmysql
 spec:
   storageClassName: manual
   accessModes:
