--- a/k8s/secrets.yaml
+++ b/k8s/secrets.yaml
@@ -1,7 +1,18 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  creationTimestamp: null
+  name: flaskmysql
+spec: {}
+status: {}
+
+---
 apiVersion: v1
 kind: Secret
 metadata:
   name: flaskapi-secrets
+  namespace: flaskmysql
 type: Opaque
 data:
   db_root_password: "U2VuaGElIzEyMw=="
